Fixed bug where footer covered text of main page. Fixed side-navbar background colour not reching bottom of page.

--- a/html/style.css
+++ b/html/style.css
@@ -15,6 +15,7 @@ body {
 .main-content-container {
   display: flex;
   flex-direction: row;
+  margin-bottom: 3rem;
 }
 
 /* Navbar Styles */
@@ -32,7 +33,7 @@ nav.navbar {
 
 .side-nav {
   flex: 1;
-  height: 100vh;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   padding: 2vw;
@@ -86,6 +87,7 @@ main {
 footer {
   text-align: center;
   padding: 1rem;
+  height: 3rem;
   background-color: #333;
   color: white;
   position: fixed;
